testdata/bad/timestamp_26.ion
2004-12-11T12:10+8:00
